Fixed blogpost spacing and title overflow

--- a/public/resources/static/css/index.css
+++ b/public/resources/static/css/index.css
@@ -46,9 +46,18 @@
 }
 
 .blog-content .title{
+    height: 2rem;
+
     font-weight: bolder;
     font-size: 25px;
-    line-height: 0.5rem;
+
+    overflow: hidden !important;
+    -o-text-overflow: ellipsis;
+       text-overflow: ellipsis;
+
+    display: -webkit-box;
+    -webkit-line-clamp: 1; /* number of lines to show */
+    -webkit-box-orient: vertical;
 }
 
 .blog-body p {
@@ -63,7 +72,7 @@
     -webkit-box-orient: vertical;
     font-size: 1rem;
     line-height: 1.6rem;
-    margin-top: 0;
+    margin-top: 5px;
 }
 
 
